[Material][Mac]Fixed the popup blocker animation

BUG=613787

Review-Url: https://codereview.chromium.org/2026063002
Cr-Commit-Position: refs/heads/master@{#397172}